--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bambee-sass",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "homepage": "https://github.com/MBV-Media/Bambee-WordPress-Theme",
   "authors": [
     "MBV-Media"
@@ -14,11 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "foundation": "5.5.2",
+    "foundation-sites": "6.2.1",
     "modernizr": "~2.8.3",
-    "normalize-css": "~3.0.2",
-    "classie": "~1.0.1",
-    "respond": "~1.4.2",
-    "html5shiv": "~3.7.2"
+    "normalize-css": "~3.0.2"
   }
 }
